feature: add `bin`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,9 @@
     "outDir": "dist",
     "baseUrl": "src",
     "target": "ESNext",
-    "module": "ES6",
+    "module": "NodeNext",
     "lib": ["ES2019"],
-    "moduleResolution": "node",
+    "moduleResolution": "NodeNext",
     "sourceMap": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
