--- a/package.json
+++ b/package.json
@@ -6,8 +6,15 @@
     "ddd": "node dist/schema-to-services.js"
   },
   "type": "module",
+  "bin": {
+    "qraft": "./dist/bin.js"
+  },
   "dependencies": {
-    "camelcase": "^8.0.0"
+    "camelcase": "^8.0.0",
+    "chalk": "^5.3.0",
+    "commander": "^11.1.0",
+    "ora": "^8.0.1",
+    "yaml": "^2.3.4"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
