--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "yaml": "^2.3.4"
   },
   "devDependencies": {
+    "@tanstack/react-query": "^5.17.3",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^20.10.6",
     "prettier": "^3.1.1",
@@ -24,11 +25,19 @@
     "vitest": "^1.1.3"
   },
   "peerDependencies": {
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "@tanstack/react-query": "^4.0.0 || ^5.0.0",
+    "@tanstack/query-core": "^4.0.0 || ^5.0.0"
   },
   "peerDependenciesMeta": {
     "typescript": {
       "optional": false
+    },
+    "@tanstack/react-query": {
+      "optional": false
+    },
+    "@tanstack/query-core": {
+      "optional": true
     }
   },
   "files": [
@@ -37,5 +46,12 @@
   "exports": {
     "./package.json": "./package.json",
     "./*": "./dist/*.js"
+  },
+  "typesVersions": {
+    "*": {
+      "*": [
+        "dist/*"
+      ]
+    }
   }
 }
