--- a/package.json
+++ b/package.json
@@ -1,57 +1,13 @@
 {
-  "name": "@radist2s/qraft",
-  "scripts": {
-    "build": "tsc --project tsconfig.build.json",
-    "test": "vitest",
-    "ddd": "node dist/schema-to-services.js"
-  },
+  "name": "qraft",
+  "private": true,
   "type": "module",
-  "bin": {
-    "qraft": "./dist/bin.js"
-  },
-  "dependencies": {
-    "camelcase": "^8.0.0",
-    "chalk": "^5.3.0",
-    "commander": "^11.1.0",
-    "ora": "^8.0.1",
-    "yaml": "^2.3.4"
-  },
   "devDependencies": {
-    "@tanstack/react-query": "^5.17.3",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@types/node": "^20.10.6",
     "prettier": "^3.1.1",
-    "typescript": "^5.3.3",
-    "vitest": "^1.1.3"
+    "typescript": "^5.3.3"
   },
-  "peerDependencies": {
-    "typescript": "^5.3.3",
-    "@tanstack/react-query": "^4.0.0 || ^5.0.0",
-    "@tanstack/query-core": "^4.0.0 || ^5.0.0"
-  },
-  "peerDependenciesMeta": {
-    "typescript": {
-      "optional": false
-    },
-    "@tanstack/react-query": {
-      "optional": false
-    },
-    "@tanstack/query-core": {
-      "optional": true
-    }
-  },
-  "files": [
-    "dist"
-  ],
-  "exports": {
-    "./package.json": "./package.json",
-    "./*": "./dist/*.js"
-  },
-  "typesVersions": {
-    "*": {
-      "*": [
-        "dist/*"
-      ]
-    }
-  }
+  "workspaces": [
+    "packages/*"
+  ]
 }
