--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -17,9 +17,9 @@
     "yaml": "^2.3.4"
   },
   "devDependencies": {
+    "@types/node": "^18.19.4",
     "typescript": "^5.3.3",
-    "vitest": "^1.1.3",
-    "@types/node": "^18.19.4"
+    "vitest": "^1.1.3"
   },
   "peerDependencies": {
     "typescript": "^5.3.3"
