--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "qraft",
   "private": true,
   "type": "module",
+  "scripts": {
+    "build": "yarn workspaces foreach --verbose --recursive --no-private --from '@radist2s/*' run build"
+  },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "prettier": "^3.1.1",
