--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "build": "tsc --project tsconfig.build.json",
+    "dev": "yarn build --watch",
     "test": "vitest run"
   },
   "type": "module",
