chore: update prettier config

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,7 +4,7 @@
   "trailingComma": "es5",
   "importOrderCaseInsensitive": true,
   "importOrderSeparation": true,
-  "importOrder": ["^@(.*)$", "<THIRD_PARTY_MODULES>", "^[./]"],
-  "importOrderParserPlugins": ["importAssertions", "typescript"],
+  "importOrder": ["^react(.*)$","^@(.*)$", "<THIRD_PARTY_MODULES>", "^[./]"],
+  "importOrderParserPlugins": ["importAssertions", "typescript", "jsx"],
   "plugins": ["@trivago/prettier-plugin-sort-imports"]
 }
