--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "typescript": "^5.3.3"
   },
   "workspaces": [
-    "packages/*"
+    "packages/*",
+    "playground"
   ],
   "packageManager": "yarn@4.0.2"
 }
