--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -16,7 +16,12 @@
   },
   "devDependencies": {
     "@tanstack/react-query": "^5.17.3",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.2.47",
+    "@vitejs/plugin-react": "latest",
+    "jsdom": "latest",
     "react": "^18.2.0",
     "vitest": "^1.1.3"
   },
