--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -28,8 +28,7 @@
   "peerDependencies": {
     "@tanstack/query-core": "^4.0.0 || ^5.0.0",
     "@tanstack/react-query": "^4.0.0 || ^5.0.0",
-    "react": "^17.0.0 || ^18.0.0",
-    "typescript": "^5.3.3"
+    "react": "^17.0.0 || ^18.0.0"
   },
   "peerDependenciesMeta": {
     "@tanstack/query-core": {
