--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -5,6 +5,7 @@
     "outDir": "dist",
     "baseUrl": ".",
     "lib": ["ES2019", "DOM", "DOM.Iterable"],
+    "jsx": "react"
   },
   "include": ["src/**/*"]
 }
