--- a/packages/client/tsconfig.build.json
+++ b/packages/client/tsconfig.build.json
@@ -4,5 +4,12 @@
     "noEmit": false,
     "declaration": true
   },
-  "exclude": ["src/**/*.spec.ts", "src/**/*.test.ts", "src/tmp/**"]
+  "include": ["src/**/*"],
+  "exclude": [
+    "src/setupTests.ts",
+    "src/**/*.test.ts",
+    "src/**/*.test.tsx",
+    "src/mocks/**/*",
+    "vitest.config.ts"
+  ]
 }
