--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -24,6 +24,7 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.2.47",
     "@vitejs/plugin-react": "latest",
+    "@vitest/coverage-v8": "^1.1.3",
     "jsdom": "latest",
     "msw": "^2.0.12",
     "react": "^18.2.0",
