--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -27,6 +27,7 @@
     "@vitest/coverage-v8": "^1.1.3",
     "jsdom": "latest",
     "msw": "^2.0.12",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "vitest": "^1.1.3"
   },
