--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "yarn workspaces foreach --verbose --recursive --no-private --from '@radist2s/*' run build"
+    "build": "yarn workspaces foreach --verbose --recursive --no-private --from '@radist2s/*' run build",
+    "dev": "yarn workspaces foreach --verbose --recursive --no-private --from '@radist2s/*' run dev",
+    "test": "yarn workspaces foreach --verbose --recursive --no-private --from '@radist2s/*' run test",
+    "lint": "yarn workspaces foreach --verbose --recursive run lint"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
