--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "build": "yarn workspaces foreach --verbose --recursive --no-private --from '@radist2s/*' run build",
     "dev": "yarn workspaces foreach --verbose --recursive --no-private --from '@radist2s/*' run dev",
     "test": "yarn workspaces foreach --verbose --recursive --no-private --from '@radist2s/*' run test",
-    "lint": "yarn workspaces foreach --verbose --recursive run lint"
+    "lint": "yarn workspaces foreach --verbose --recursive run lint",
+    "generate": "openapi-typescript ./openapi.json -o ./openaapi.d.ts"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "openapi-typescript": "^6.7.3",
     "prettier": "^3.1.1",
     "typescript": "^5.3.3"
   },
