--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -14,6 +14,7 @@
     "camelcase": "^8.0.0",
     "chalk": "^5.3.0",
     "commander": "^11.1.0",
+    "openapi-typescript": "7.0.0-next.7",
     "ora": "^8.0.1",
     "yaml": "^2.3.4"
   },
