--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -11,8 +11,8 @@
     "qraft": "./dist/bin.js"
   },
   "dependencies": {
+    "ansi-colors": "^4.1.3",
     "camelcase": "^8.0.0",
-    "chalk": "^5.3.0",
     "commander": "^11.1.0",
     "openapi-typescript": "7.0.0-next.7",
     "ora": "^8.0.1",
