refactor: rename `qraft` bin to `qraft-openapi-services`

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -8,7 +8,7 @@
   },
   "type": "module",
   "bin": {
-    "qraft": "./dist/bin.js"
+    "qraft-openapi-services": "./dist/bin.js"
   },
   "dependencies": {
     "ansi-colors": "^4.1.3",
