--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -47,6 +47,7 @@
   ],
   "exports": {
     "./package.json": "./package.json",
+    ".": "./dist/index.js",
     "./*": "./dist/*.js"
   },
   "typesVersions": {
