--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@radist2s/qraft-cli",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.0",
   "scripts": {
     "build": "tsc --project tsconfig.build.json",
     "dev": "yarn build --watch",
