--- a/packages/openapi-typescript/package.json
+++ b/packages/openapi-typescript/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "bin": "./dist/bin.js",
   "scripts": {
-    "build": "tsc --project tsconfig.build.json",
+    "build": "rimraf dist/ && tsc --project tsconfig.build.json",
     "dev": "yarn build --watch"
   },
   "dependencies": {
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.19.4",
+    "rimraf": "^5.0.5",
     "typescript": "^5.3.3"
   },
   "peerDependencies": {
