--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@radist2s/qraft-cli",
+  "name": "@openapi-qraft/cli",
   "version": "1.0.0-beta.0",
   "scripts": {
     "build": "rimraf dist/ && tsc --project tsconfig.build.json",
