--- a/packages/openapi-typescript/package.json
+++ b/packages/openapi-typescript/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "@radist2s/qraft-openapi-typescript",
+  "name": "@openapi-qraft/openapi-typescript",
   "version": "1.0.0-beta.0",
+  "private": true,
   "packageManager": "yarn@4.0.2",
   "type": "module",
-  "bin": "./dist/bin.js",
+  "bin": {
+    "openapi-qraft-typescript": "./dist/bin.js"
+  },
   "scripts": {
     "build": "rimraf dist/ && tsc --project tsconfig.build.json",
     "dev": "yarn build --watch"
