--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@radist2s/qraft",
+  "name": "@openapi-qraft/react",
   "version": "1.0.0-beta.0",
   "scripts": {
     "build": "rimraf dist/ && tsc --project tsconfig.build.json",
@@ -11,7 +11,7 @@
   "type": "module",
   "sideEffects": false,
   "devDependencies": {
-    "@radist2s/qraft-cli": "workspace:~",
+    "@openapi-qraft/cli": "workspace:~",
     "@tanstack/react-query": "^5.17.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
