refactor: rename bin to `openapi-qraft`

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -8,7 +8,7 @@
   },
   "type": "module",
   "bin": {
-    "qraft-openapi-services": "./dist/bin.js"
+    "openapi-qraft": "./dist/bin.js"
   },
   "dependencies": {
     "ansi-colors": "^4.1.3",
