--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -6,12 +6,14 @@
     "dev": "yarn build --watch",
     "test": "vitest run",
     "typecheck": "tsc --noEmit",
-    "generate": "qraft-openapi-services ../../openapi.json --clean -o src/mocks/fixtures/api --schema-types-path '../../../../../../../openapi.d.ts'"
+    "generate-qraft": "openapi-qraft ./src/fixtures/openapi.json --clean -o src/fixtures/api --schema-types-path '../../openapi.ts'",
+    "generate-types": "openapi-qraft-typescript ./src/fixtures/openapi.json -o src/fixtures/openapi.ts"
   },
   "type": "module",
   "sideEffects": false,
   "devDependencies": {
     "@openapi-qraft/cli": "workspace:~",
+    "@openapi-qraft/openapi-typescript": "workspace:^",
     "@tanstack/react-query": "^5.17.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
