--- a/packages/react-client/tsconfig.build.json
+++ b/packages/react-client/tsconfig.build.json
@@ -10,6 +10,7 @@
     "src/**/*.test.ts",
     "src/**/*.test.tsx",
     "src/mocks/**/*",
+    "src/fixtures/**/*",
     "vitest.config.ts"
   ]
 }
