--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -6,7 +6,7 @@
     "dev": "rimraf dist/ && tsc --project tsconfig.dev.json --watch",
     "test": "vitest run",
     "typecheck": "tsc --noEmit",
-    "generate-qraft": "openapi-qraft ./src/fixtures/openapi.json --clean -o src/fixtures/api --schema-types-path '../../openapi.ts'",
+    "generate-qraft": "openapi-qraft ./src/fixtures/openapi.json --clean -o src/fixtures/api --openapi-types-import-path '../../openapi.ts'",
     "generate-types": "openapi-qraft-typescript ./src/fixtures/openapi.json -o src/fixtures/openapi.ts"
   },
   "type": "module",
