--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@openapi-qraft/cli",
   "version": "1.0.0-beta.0",
+  "description": "CLI for generating typed Tanstack Query React Hooks and services from OpenAPI Schemas, improving type safety in React apps",
   "scripts": {
     "build": "rimraf dist/ && tsc --project tsconfig.build.json",
     "dev": "yarn build --watch",
@@ -45,5 +46,22 @@
         "dist/*"
       ]
     }
-  }
+  },
+  "keywords": [
+    "openapi",
+    "swagger",
+    "rest",
+    "api",
+    "oapi_3",
+    "oapi_3_1",
+    "typescript",
+    "ts",
+    "dts",
+    "codegen",
+    "generation",
+    "fetch",
+    "react",
+    "hooks",
+    "TanStack Query"
+  ]
 }
