--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -30,20 +30,9 @@
     "vitest": "^1.1.3"
   },
   "peerDependencies": {
-    "@tanstack/query-core": "^4.0.0 || ^5.0.0",
-    "@tanstack/react-query": "^4.0.0 || ^5.0.0",
-    "react": "^17.0.0 || ^18.0.0"
-  },
-  "peerDependenciesMeta": {
-    "@tanstack/query-core": {
-      "optional": true
-    },
-    "@tanstack/react-query": {
-      "optional": false
-    },
-    "react": {
-      "optional": true
-    }
+    "@tanstack/query-core": "^5.0.0",
+    "@tanstack/react-query": "^5.0.0",
+    "react": "^18.0.0"
   },
   "files": [
     "dist",
