feature: add fixtures exclusion

--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -36,7 +36,8 @@
   },
   "files": [
     "dist",
-    "src"
+    "src",
+    "!dist/fixtures/**"
   ],
   "exports": {
     "./package.json": "./package.json",
