chore: add repos to package.json

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -39,6 +39,14 @@
       ]
     }
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/OpenAPI-Qraft/openapi-qraft.git",
+    "directory": "packages/cli"
+  },
+  "bugs": {
+    "url": "https://github.com/OpenAPI-Qraft/openapi-qraft/issues"
+  },
   "keywords": [
     "openapi",
     "swagger",
