--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -51,6 +51,14 @@
       ]
     }
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/OpenAPI-Qraft/openapi-qraft.git",
+    "directory": "packages/react-client"
+  },
+  "bugs": {
+    "url": "https://github.com/OpenAPI-Qraft/openapi-qraft/issues"
+  },
   "keywords": [
     "openapi",
     "swagger",
