--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "yarn workspaces foreach --verbose --recursive run lint"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.27.1",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "prettier": "^3.1.1",
     "typescript": "^5.3.3"
