chore: add `!src/fixtures` to npm "files"

--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -37,7 +37,8 @@
   "files": [
     "dist",
     "src",
-    "!dist/fixtures/**"
+    "!dist/fixtures/**",
+    "!src/fixtures/**"
   ],
   "exports": {
     "./package.json": "./package.json",
