RELEASING: Releasing 5 package(s)
Releases:
  @openapi-qraft/cli@1.0.0
  @openapi-qraft/react@1.0.0
  @openapi-qraft/e2e@1.0.0
  @openapi-qraft/openapi-typescript@1.0.0
  playground@0.0.0

--- a/e2e/package.json
+++ b/e2e/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openapi-qraft/e2e",
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "verdaccio": "VERDACCIO_STORAGE_PATH=./verdaccio-storage verdaccio --config ./verdaccio-config.yaml",
