--- a/packages/openapi-typescript/package.json
+++ b/packages/openapi-typescript/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openapi-qraft/openapi-typescript",
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0",
   "private": true,
   "packageManager": "yarn@4.0.2",
   "type": "module",
