--- a/packages/react-client/tsconfig.json
+++ b/packages/react-client/tsconfig.json
@@ -7,5 +7,9 @@
     "lib": ["ES2019", "DOM", "DOM.Iterable"],
     "jsx": "react"
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": [
+    "**/node_modules",
+    "**/.*/"
+  ]
 }
