--- a/playground/tsconfig.json
+++ b/playground/tsconfig.json
@@ -21,5 +21,6 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
+  "exclude": ["src/api/**/*", "src/kubb/**/*", "src/orval/**/*"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
