--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -25,6 +25,7 @@
     "@vitest/coverage-v8": "^1.1.3",
     "jsdom": "latest",
     "msw": "^2.0.12",
+    "prettier": "^3.1.1",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "rimraf": "^5.0.5",
