chore: update release job

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "build": "yarn workspaces foreach --verbose --recursive --topological --from '@openapi-qraft/*' run build",
     "dev": "yarn workspaces foreach --verbose --recursive --parallel --no-private --from '@openapi-qraft/*' run dev",
     "test": "yarn workspaces foreach --verbose --recursive --topological --no-private --from '@openapi-qraft/*' run test",
-    "lint": "yarn workspaces foreach --verbose --recursive --topological run lint"
+    "lint": "yarn workspaces foreach --verbose --recursive --topological run lint",
+    "changeset:version": "yarn exec .changeset/version",
+    "changeset:publish": "yarn exec .changeset/publish --create-git-tags"
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
