Revert "chore: update release job"
This reverts commit ab8a369c5fdbcc79e9450f7b5ed40ef7b0865535.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,9 +26,6 @@ jobs:
       - name: Install Dependencies
         run: yarn install --immutable
 
-      - name: Build Packages
-        run: yarn build
-
       - name: Create dummy npmrc # Prevent creation of '.npmrc' by 'changesets-gitlab' with the 'NPM_TOKEN'
         run: touch ".npmrc"
 
@@ -42,8 +39,9 @@ jobs:
         id: changesets
         uses: changesets/action@v1
         with:
-          version: yarn changeset:version
-          publish: yarn changeset:publish
+          # This expects you to have a script called release which does a build for your packages and calls changeset publish
+          publish: yarn exec .changeset/publish --create-git-tags
+          version: yarn exec .changeset/version
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
