chore: update job names

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
   validate:
     timeout-minutes: 10
     runs-on: ubuntu-latest
-    name: validate
+    name: Validate Build
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
