--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -9,7 +9,7 @@ concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 jobs:
   release:
-    name: Changesets Release
+    name: Changesets Versioning
     runs-on: ubuntu-latest
     permissions:
       contents: write
