chore: debug job tags

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,12 @@
 name: Release
 
 on:
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - '*'
+  push:
+    branches:
+      - main
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
@@ -9,15 +14,15 @@ jobs:
   release:
     name: Changesets Release
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      pull-requests: write
-    environment: production
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
         with:
+          fetch-depth: 1
           fetch-tags: true
+
+      - name: list Git Tags
+        run: git tag
 
       - name: Setup Node.js 18.x
         uses: actions/setup-node@v4
@@ -28,24 +33,6 @@ jobs:
       - name: Install Dependencies
         run: yarn install --immutable
 
-      - name: Build
-        run: yarn build
+      - name: Create tags
+        run: yarn changeset tag
 
-      - name: Create dummy npmrc # Prevent creation of '.npmrc' by 'changesets-gitlab' with the 'NPM_TOKEN'
-        run: touch ".npmrc"
-
-      - name: Set token in .yarnrc.yml
-        run: |
-          yarn config set 'npmScopes["openapi-qraft"]' --home --json '{"npmAlwaysAuth":true,"npmAuthToken":"${NPM_TOKEN}"}'
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-      - name: Create Version Packages Pull Request or Publish to npm
-        id: changesets
-        uses: changesets/action@v1
-        with:
-          publish: yarn exec .changeset/publish.sh --create-git-tags
-          version: yarn exec .changeset/version.sh
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
