--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -15,12 +15,14 @@
     "ansi-colors": "^4.1.3",
     "camelcase": "^8.0.0",
     "commander": "^11.1.0",
+    "micromatch": "^4.0.5",
     "openapi-typescript": "7.0.0-next.7",
     "ora": "^8.0.1",
     "typescript": "^5.3.3",
     "yaml": "^2.3.4"
   },
   "devDependencies": {
+    "@types/micromatch": "^4",
     "@types/node": "^18.19.4",
     "rimraf": "^5.0.5",
     "vitest": "^1.1.3"
