--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,7 +2,7 @@
   "$schema": "https://unpkg.com/@changesets/config@3.0.0/schema.json",
   "changelog": "@changesets/cli/changelog",
   "commit": ["@changesets/cli/commit", { "skipCI": false }],
-  "fixed": [],
+  "fixed": [["@openapi-qraft/react", "@openapi-qraft/cli"]],
   "linked": [],
   "access": "public",
   "baseBranch": "origin/main",
