feature: add `openapi-qraft-website` package

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -7,5 +7,5 @@
   "access": "public",
   "baseBranch": "origin/main",
   "updateInternalDependencies": "patch",
-  "ignore": ["@openapi-qraft/e2e", "playground"]
+  "ignore": ["@openapi-qraft/e2e", "playground", "openapi-qraft-website"]
 }
