chore(website): update algolia custom crawler `attributesForFaceting` config to keep `algolia.contextualSearch` intact
* See: https://github.com/facebook/docusaurus/issues/6693#issuecomment-1042718558

--- a/website/tools/algolia/config.json
+++ b/website/tools/algolia/config.json
@@ -3,5 +3,8 @@
   "start_urls": ["https://openapi-qraft.github.io/openapi-qraft/"],
   "sitemap_urls": ["https://openapi-qraft.github.io/openapi-qraft/sitemap.xml"],
   "stop_urls": [],
-  "strip_chars": "#"
+  "strip_chars": "#",
+  "custom_settings": {
+    "attributesForFaceting": ["language", "version", "type", "docusaurus_tag"]
+  }
 }
