chore: change package `"files"`

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -32,7 +32,11 @@
   },
   "files": [
     "dist",
-    "bin.mjs"
+    "src",
+    "!dist/**/*.test.*",
+    "!dist/**/*.spec.*",
+    "!src/**/*.test.*",
+    "!src/**/*.spec.*"
   ],
   "exports": {
     "./package.json": "./package.json",
