feature: split CLI package to separate packages

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,7 +2,7 @@
   "$schema": "https://unpkg.com/@changesets/config@3.0.0/schema.json",
   "changelog": "@changesets/cli/changelog",
   "commit": ["@changesets/cli/commit", { "skipCI": false }],
-  "fixed": [["@openapi-qraft/react", "@openapi-qraft/cli"]],
+  "fixed": [["@openapi-qraft/react", "@openapi-qraft/cli", "@openapi-qraft/plugin"]],
   "linked": [],
   "access": "public",
   "baseBranch": "origin/main",
