--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -13,21 +13,13 @@
     "openapi-qraft": "./bin.mjs"
   },
   "dependencies": {
-    "ansi-colors": "^4.1.3",
-    "camelcase": "^8.0.0",
-    "commander": "^11.1.0",
-    "micromatch": "^4.0.5",
-    "openapi-typescript": "7.0.0-next.7",
-    "ora": "^8.0.1",
-    "typescript": "^5.3.3",
-    "yaml": "^2.3.4"
+    "@openapi-qraft/tanstack-query-react-plugin": "workspace:~",
+    "commander": "^11.1.0"
   },
   "devDependencies": {
-    "@types/micromatch": "^4",
-    "@types/mock-fs": "^4.13.4",
     "@types/node": "^18.19.4",
-    "mock-fs": "^5.2.0",
     "rimraf": "^5.0.5",
+    "typescript": "^5.3.3",
     "vitest": "^1.4.0"
   },
   "files": [
