--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -8,6 +8,7 @@
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
     "typecheck": "tsc --noEmit",
+    "lint": "eslint",
     "generate-qraft": "openapi-qraft --plugin tanstack-query-react src/tests/fixtures/openapi.json --clean -o src/tests/fixtures/api --openapi-types-import-path '../../openapi.js' --explicit-import-extensions --filter-services '/approval_policies/**,/entities/**,/files/**,!/internal/**' && prettier --write src/tests/fixtures/api/**/*.ts",
     "generate-types": "openapi-qraft-typescript src/tests/fixtures/openapi.json -o src/tests/fixtures/openapi.ts"
   },
@@ -15,6 +16,7 @@
   "sideEffects": false,
   "devDependencies": {
     "@openapi-qraft/cli": "workspace:~",
+    "@openapi-qraft/eslint-config": "workspace:~",
     "@openapi-qraft/openapi-typescript": "workspace:^",
     "@tanstack/react-query": "^5.17.3",
     "@testing-library/jest-dom": "^5.17.0",
@@ -23,6 +25,8 @@
     "@types/react": "^18.2.47",
     "@vitejs/plugin-react": "latest",
     "@vitest/coverage-v8": "^1.1.3",
+    "eslint": "^9.0.0",
+    "globals": "^15.0.0",
     "jsdom": "latest",
     "msw": "^2.0.12",
     "prettier": "^3.1.1",
