--- a/packages/openapi-typescript/package.json
+++ b/packages/openapi-typescript/package.json
@@ -9,14 +9,18 @@
   },
   "scripts": {
     "build": "rimraf dist/ && tsc --project tsconfig.build.json",
-    "dev": "yarn build --watch"
+    "dev": "yarn build --watch",
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint"
   },
   "dependencies": {
     "commander": "^11.1.0",
     "openapi-typescript": "7.0.0-next.7"
   },
   "devDependencies": {
+    "@openapi-qraft/eslint-config": "workspace:~",
     "@types/node": "^18.19.4",
+    "eslint": "^9.0.0",
     "rimraf": "^5.0.5",
     "typescript": "^5.3.3"
   },
