--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -9,7 +9,7 @@
     "test:coverage": "vitest run --coverage",
     "typecheck": "tsc --noEmit",
     "lint": "eslint",
-    "generate-qraft": "openapi-qraft --plugin tanstack-query-react src/tests/fixtures/openapi.json --clean -o src/tests/fixtures/api --openapi-types-import-path '../../openapi.js' --explicit-import-extensions --filter-services '/approval_policies/**,/entities/**,/files/**,!/internal/**' && prettier --write src/tests/fixtures/api/**/*.ts",
+    "generate-qraft": "openapi-qraft --plugin tanstack-query-react @openapi-qraft/test-fixtures/openapi.json --clean -o src/tests/fixtures/api --openapi-types-import-path '../../openapi.js' --explicit-import-extensions --filter-services '/approval_policies/**,/entities/**,/files/**,!/internal/**' && prettier --write src/tests/fixtures/api/**/*.ts",
     "generate-types": "openapi-qraft-typescript src/tests/fixtures/openapi.json -o src/tests/fixtures/openapi.ts"
   },
   "type": "module",
@@ -18,6 +18,7 @@
     "@openapi-qraft/cli": "workspace:~",
     "@openapi-qraft/eslint-config": "workspace:~",
     "@openapi-qraft/openapi-typescript": "workspace:^",
+    "@openapi-qraft/test-fixtures": "workspace:~",
     "@tanstack/react-query": "^5.17.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
