--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -19,11 +19,11 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v4
 
-      - name: Setup Node.js 18.x
+      - name: Setup Node.js 20.x
         uses: actions/setup-node@v4
         with:
           cache: 'yarn'
-          node-version: 18.x
+          node-version: 20.12.2
 
       - name: Install Dependencies
         run: yarn install --immutable
